# tetris-troll

./: .gitignore  Cargo.toml  build.sh  build_dev.bat  build_dev.sh  build_dev_deps.sh  readme.md
.github/workflows/: clippy.yml  page.yml
_egui/: Cargo.toml
_egui/src/: main.rs
_html/p/datgui/: index.html
_html/p/svg1/: index.html
_rapier/: .gitignore  Cargo.toml
_rapier/src/: main.rs
_rapier_react/: README.md  package.json  pnpm-lock.yaml
_rapier_react/src/: App.jsx
_template/: Cargo.toml
_template/src/: main.rs  player.rs  pointers.rs  ui.rs
basics/: .gitignore  Cargo.toml
basics/src/: enemies.rs  main.rs  manager.json  player.rs  universe.rs
examples/: crdt-000.rs  math-002-vectors-2.rs  math-003-dot-product.rs  math-vectors-1.rs
src/: background.glsl  bloque.rs  constants.rs  debug.rs  enemy.rs  game_configs.rs  main.rs  manager.rs  physics.rs  piso.rs  shared.rs  starfield-shader.glsl  tetrio_I.rs  tetrio_J.rs  tetrio_L.rs  tetrio_O.rs  tetrio_S.rs  tetrio_T.rs  tetrio_Z.rs  tetromino.rs  touches.rs  ui.rs  universe.rs  world.rs  world_with_holes.rs
web/: index.html
