[package]
name = "tetris-troll"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev.package.'*']
opt-level = 3

[dependencies]
egui = "0.22.0"
egui-macroquad = { git = "https://github.com/Bytekeeper/egui-macroquad.git", brach = "master" }
macroquad =  { git = "https://github.com/Bytekeeper/macroquad.git", brach = "master", features = ["audio", "log-rs"] }
# macroquad = {version = "0.4.2", features = ["audio", "log-rs"]}
# macroquad-particles = "0.2.0"
rapier2d = { version = "0.17.2", features = [ "simd-stable" ] }
