[package]
name = "tetris-troll"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev.package.'*']
opt-level = 3

[dependencies]
catppuccin-egui = "3.1.0"
egui = "0.22.0"
egui-macroquad = { git = "https://github.com/ph4un00b/egui-macroquad.git", brach = "master" }
macroquad =  { git = "https://github.com/ph4un00b/macroquad.git", brach = "master" }
rapier2d = { version = "0.17.2", features = [ "simd-stable" ] }
