[package]
name = "_egui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.22.0"
egui-macroquad = { git = "https://github.com/Bytekeeper/egui-macroquad.git", brach = "master" }
macroquad =  { git = "https://github.com/Bytekeeper/macroquad.git", brach = "master" }
